--- a/compose/compose.healthcheck.yaml
+++ b/compose/compose.healthcheck.yaml
@@ -21,7 +21,7 @@ services:
 
   db:
     healthcheck:
-      test: 'mysqladmin ping -h localhost -u root -pmagento'
+      test: 'mysqladmin ping -h localhost -u root -poVIMcjwoNVqY8nQUqdXXHkc555xEoANDkc3k2'
       interval: 5s
       timeout: 5s
       retries: 30
